// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuItems should not render Manage rules 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="euiFlexGroup emotion-euiFlexGroup-responsive-l-center-baseline-row"
        data-test-subj="Container"
      >
        <div
          class="euiFlexItem emotion-EuiFlexItem"
        >
          <div
            class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
          >
            <div
              class="euiPopover emotion-euiPopover"
              data-test-subj="LinkedRulesMenuItems"
            >
              <div
                class="euiPopover__anchor css-16vtueo-render"
              >
                <button
                  aria-label="Header menu Button Empty"
                  class="euiButtonEmpty css-9t7nyf-empty-primary"
                  data-test-subj="LinkedRulesMenuEmptyButton"
                  type="button"
                >
                  <span
                    class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
                  >
                    <span
                      class="euiButtonContent__icon"
                      color="inherit"
                      data-euiicon-type="arrowDown"
                    />
                    <span
                      class="euiButtonEmpty__text"
                    >
                      Linked to 1 rules
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="euiFlexItem emotion-euiFlexItem-grow-1"
        >
          <div
            class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
          >
            <div
              class="euiPopover emotion-euiPopover"
              data-test-subj="MenuActionsItems"
            >
              <div
                class="euiPopover__anchor css-16vtueo-render"
              >
                <button
                  aria-label="Header menu Button Icon"
                  class="euiButtonIcon euiButtonIcon--xSmall emotion-euiButtonIcon-empty-primary-hoverStyles"
                  data-test-subj="MenuActionsButtonIcon"
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    class="euiButtonIcon__icon"
                    color="inherit"
                    data-euiicon-type="boxesHorizontal"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="euiFlexGroup emotion-euiFlexGroup-responsive-l-center-baseline-row"
      data-test-subj="Container"
    >
      <div
        class="euiFlexItem emotion-EuiFlexItem"
      >
        <div
          class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
        >
          <div
            class="euiPopover emotion-euiPopover"
            data-test-subj="LinkedRulesMenuItems"
          >
            <div
              class="euiPopover__anchor css-16vtueo-render"
            >
              <button
                aria-label="Header menu Button Empty"
                class="euiButtonEmpty css-9t7nyf-empty-primary"
                data-test-subj="LinkedRulesMenuEmptyButton"
                type="button"
              >
                <span
                  class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
                >
                  <span
                    class="euiButtonContent__icon"
                    color="inherit"
                    data-euiicon-type="arrowDown"
                  />
                  <span
                    class="euiButtonEmpty__text"
                  >
                    Linked to 1 rules
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiFlexItem emotion-euiFlexItem-grow-1"
      >
        <div
          class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
        >
          <div
            class="euiPopover emotion-euiPopover"
            data-test-subj="MenuActionsItems"
          >
            <div
              class="euiPopover__anchor css-16vtueo-render"
            >
              <button
                aria-label="Header menu Button Icon"
                class="euiButtonIcon euiButtonIcon--xSmall emotion-euiButtonIcon-empty-primary-hoverStyles"
                data-test-subj="MenuActionsButtonIcon"
                type="button"
              >
                <span
                  aria-hidden="true"
                  class="euiButtonIcon__icon"
                  color="inherit"
                  data-euiicon-type="boxesHorizontal"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`MenuItems should not render linkedRules HeaderMenu component, instead should render a text 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="euiFlexGroup emotion-euiFlexGroup-responsive-l-center-baseline-row"
        data-test-subj="Container"
      >
        <div
          class="euiFlexItem emotion-EuiFlexItem"
        >
          <span
            class="emotion-EuiTextColor"
            data-test-subj="noLinkedRules"
          >
            Linked to 0 rules
          </span>
        </div>
        <div
          class="euiFlexItem emotion-euiFlexItem-grow-1"
        >
          <button
            class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-m-fill-primary"
            data-test-subj="ManageRulesButton"
            type="button"
          >
            <span
              class="emotion-euiButtonDisplayContent"
            >
              <span
                class="eui-textTruncate"
              >
                Manage rules
              </span>
            </span>
          </button>
        </div>
        <div
          class="euiFlexItem emotion-euiFlexItem-grow-1"
        >
          <div
            class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
          >
            <div
              class="euiPopover emotion-euiPopover"
              data-test-subj="MenuActionsItems"
            >
              <div
                class="euiPopover__anchor css-16vtueo-render"
              >
                <button
                  aria-label="Header menu Button Icon"
                  class="euiButtonIcon euiButtonIcon--xSmall emotion-euiButtonIcon-empty-primary-hoverStyles"
                  data-test-subj="MenuActionsButtonIcon"
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    class="euiButtonIcon__icon"
                    color="inherit"
                    data-euiicon-type="boxesHorizontal"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="euiFlexGroup emotion-euiFlexGroup-responsive-l-center-baseline-row"
      data-test-subj="Container"
    >
      <div
        class="euiFlexItem emotion-EuiFlexItem"
      >
        <span
          class="emotion-EuiTextColor"
          data-test-subj="noLinkedRules"
        >
          Linked to 0 rules
        </span>
      </div>
      <div
        class="euiFlexItem emotion-euiFlexItem-grow-1"
      >
        <button
          class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-m-fill-primary"
          data-test-subj="ManageRulesButton"
          type="button"
        >
          <span
            class="emotion-euiButtonDisplayContent"
          >
            <span
              class="eui-textTruncate"
            >
              Manage rules
            </span>
          </span>
        </button>
      </div>
      <div
        class="euiFlexItem emotion-euiFlexItem-grow-1"
      >
        <div
          class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
        >
          <div
            class="euiPopover emotion-euiPopover"
            data-test-subj="MenuActionsItems"
          >
            <div
              class="euiPopover__anchor css-16vtueo-render"
            >
              <button
                aria-label="Header menu Button Icon"
                class="euiButtonIcon euiButtonIcon--xSmall emotion-euiButtonIcon-empty-primary-hoverStyles"
                data-test-subj="MenuActionsButtonIcon"
                type="button"
              >
                <span
                  aria-hidden="true"
                  class="euiButtonIcon__icon"
                  color="inherit"
                  data-euiicon-type="boxesHorizontal"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`MenuItems should render all menu actions enabled 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="euiFlexGroup emotion-euiFlexGroup-responsive-l-center-baseline-row"
        data-test-subj="Container"
      >
        <div
          class="euiFlexItem emotion-EuiFlexItem"
        >
          <span
            class="emotion-EuiTextColor"
            data-test-subj="noLinkedRules"
          >
            Linked to 0 rules
          </span>
        </div>
        <div
          class="euiFlexItem emotion-euiFlexItem-grow-1"
        >
          <button
            class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-m-fill-primary"
            data-test-subj="ManageRulesButton"
            type="button"
          >
            <span
              class="emotion-euiButtonDisplayContent"
            >
              <span
                class="eui-textTruncate"
              >
                Manage rules
              </span>
            </span>
          </button>
        </div>
        <div
          class="euiFlexItem emotion-euiFlexItem-grow-1"
        >
          <div
            class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
          >
            <div
              class="euiPopover emotion-euiPopover"
              data-test-subj="MenuActionsItems"
            >
              <div
                class="euiPopover__anchor css-16vtueo-render"
              >
                <button
                  aria-label="Header menu Button Icon"
                  class="euiButtonIcon euiButtonIcon--xSmall emotion-euiButtonIcon-empty-primary-hoverStyles"
                  data-test-subj="MenuActionsButtonIcon"
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    class="euiButtonIcon__icon"
                    color="inherit"
                    data-euiicon-type="boxesHorizontal"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-euiportal="true"
    >
      <div
        data-eui="EuiFocusTrap"
      >
        <div
          aria-describedby="generated-id"
          aria-live="off"
          aria-modal="true"
          class="euiPanel euiPanel--plain euiPanel--paddingSmall euiPopover__panel emotion-euiPanel-grow-m-s-plain-euiPopover__panel"
          data-popover-panel="true"
          role="dialog"
          style="top: 16px; left: -22px; will-change: transform, opacity; z-index: 2000;"
          tabindex="0"
        >
          <div
            class="euiPopover__arrow emotion-euiPopoverArrow-bottom"
            data-popover-arrow="bottom"
            style="left: 10px; top: 0px;"
          />
          <p
            class="emotion-euiScreenReaderOnly"
            id="generated-id"
          >
            You are in a dialog. To close this dialog, hit escape.
          </p>
          <div>
            <div
              class="euiContextMenuPanel eui-scrollBar css-zos0rl"
              data-test-subj="MenuActionsMenuPanel"
              tabindex="-1"
            >
              <div>
                <button
                  class="euiContextMenuItem euiContextMenuItem--small"
                  data-test-subj="MenuActionsActionItem1"
                  type="button"
                >
                  <span
                    class="euiContextMenu__itemLayout"
                  >
                    <span
                      class="euiContextMenu__icon"
                      color="inherit"
                      data-euiicon-type="exportAction"
                    />
                    <span
                      class="euiContextMenuItem__text"
                    >
                      Export exception list
                    </span>
                  </span>
                </button>
                <button
                  class="euiContextMenuItem euiContextMenuItem--small"
                  data-test-subj="MenuActionsActionItem2"
                  type="button"
                >
                  <span
                    class="euiContextMenu__itemLayout"
                  >
                    <span
                      class="euiContextMenu__icon"
                      color="inherit"
                      data-euiicon-type="trash"
                    />
                    <span
                      class="euiContextMenuItem__text"
                    >
                      Delete exception list
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="euiFlexGroup emotion-euiFlexGroup-responsive-l-center-baseline-row"
      data-test-subj="Container"
    >
      <div
        class="euiFlexItem emotion-EuiFlexItem"
      >
        <span
          class="emotion-EuiTextColor"
          data-test-subj="noLinkedRules"
        >
          Linked to 0 rules
        </span>
      </div>
      <div
        class="euiFlexItem emotion-euiFlexItem-grow-1"
      >
        <button
          class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-m-fill-primary"
          data-test-subj="ManageRulesButton"
          type="button"
        >
          <span
            class="emotion-euiButtonDisplayContent"
          >
            <span
              class="eui-textTruncate"
            >
              Manage rules
            </span>
          </span>
        </button>
      </div>
      <div
        class="euiFlexItem emotion-euiFlexItem-grow-1"
      >
        <div
          class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
        >
          <div
            class="euiPopover emotion-euiPopover"
            data-test-subj="MenuActionsItems"
          >
            <div
              class="euiPopover__anchor css-16vtueo-render"
            >
              <button
                aria-label="Header menu Button Icon"
                class="euiButtonIcon euiButtonIcon--xSmall emotion-euiButtonIcon-empty-primary-hoverStyles"
                data-test-subj="MenuActionsButtonIcon"
                type="button"
              >
                <span
                  aria-hidden="true"
                  class="euiButtonIcon__icon"
                  color="inherit"
                  data-euiicon-type="boxesHorizontal"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`MenuItems should render delete action disabled 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="euiFlexGroup emotion-euiFlexGroup-responsive-l-center-baseline-row"
        data-test-subj="Container"
      >
        <div
          class="euiFlexItem emotion-EuiFlexItem"
        >
          <div
            class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
          >
            <div
              class="euiPopover emotion-euiPopover"
              data-test-subj="LinkedRulesMenuItems"
            >
              <div
                class="euiPopover__anchor css-16vtueo-render"
              >
                <button
                  aria-label="Header menu Button Empty"
                  class="euiButtonEmpty css-9t7nyf-empty-primary"
                  data-test-subj="LinkedRulesMenuEmptyButton"
                  type="button"
                >
                  <span
                    class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
                  >
                    <span
                      class="euiButtonContent__icon"
                      color="inherit"
                      data-euiicon-type="arrowDown"
                    />
                    <span
                      class="euiButtonEmpty__text"
                    >
                      Linked to 1 rules
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="euiFlexItem emotion-euiFlexItem-grow-1"
        >
          <div
            class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
          >
            <div
              class="euiPopover emotion-euiPopover"
              data-test-subj="MenuActionsItems"
            >
              <div
                class="euiPopover__anchor css-16vtueo-render"
              >
                <button
                  aria-label="Header menu Button Icon"
                  class="euiButtonIcon euiButtonIcon--xSmall emotion-euiButtonIcon-empty-primary-hoverStyles"
                  data-test-subj="MenuActionsButtonIcon"
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    class="euiButtonIcon__icon"
                    color="inherit"
                    data-euiicon-type="boxesHorizontal"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-euiportal="true"
    >
      <div
        data-eui="EuiFocusTrap"
      >
        <div
          aria-describedby="generated-id"
          aria-live="off"
          aria-modal="true"
          class="euiPanel euiPanel--plain euiPanel--paddingSmall euiPopover__panel emotion-euiPanel-grow-m-s-plain-euiPopover__panel"
          data-popover-panel="true"
          role="dialog"
          style="top: 16px; left: -22px; will-change: transform, opacity; z-index: 2000;"
          tabindex="0"
        >
          <div
            class="euiPopover__arrow emotion-euiPopoverArrow-bottom"
            data-popover-arrow="bottom"
            style="left: 10px; top: 0px;"
          />
          <p
            class="emotion-euiScreenReaderOnly"
            id="generated-id"
          >
            You are in a dialog. To close this dialog, hit escape.
          </p>
          <div>
            <div
              class="euiContextMenuPanel eui-scrollBar css-zos0rl"
              data-test-subj="MenuActionsMenuPanel"
              tabindex="-1"
            >
              <div>
                <button
                  class="euiContextMenuItem euiContextMenuItem--small"
                  data-test-subj="MenuActionsActionItem1"
                  type="button"
                >
                  <span
                    class="euiContextMenu__itemLayout"
                  >
                    <span
                      class="euiContextMenu__icon"
                      color="inherit"
                      data-euiicon-type="exportAction"
                    />
                    <span
                      class="euiContextMenuItem__text"
                    >
                      Export exception list
                    </span>
                  </span>
                </button>
                <button
                  class="euiContextMenuItem euiContextMenuItem--small euiContextMenuItem-isDisabled"
                  data-test-subj="MenuActionsActionItem2"
                  disabled=""
                  type="button"
                >
                  <span
                    class="euiContextMenu__itemLayout"
                  >
                    <span
                      class="euiContextMenu__icon"
                      color="inherit"
                      data-euiicon-type="trash"
                    />
                    <span
                      class="euiContextMenuItem__text"
                    >
                      Delete exception list
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="euiFlexGroup emotion-euiFlexGroup-responsive-l-center-baseline-row"
      data-test-subj="Container"
    >
      <div
        class="euiFlexItem emotion-EuiFlexItem"
      >
        <div
          class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
        >
          <div
            class="euiPopover emotion-euiPopover"
            data-test-subj="LinkedRulesMenuItems"
          >
            <div
              class="euiPopover__anchor css-16vtueo-render"
            >
              <button
                aria-label="Header menu Button Empty"
                class="euiButtonEmpty css-9t7nyf-empty-primary"
                data-test-subj="LinkedRulesMenuEmptyButton"
                type="button"
              >
                <span
                  class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
                >
                  <span
                    class="euiButtonContent__icon"
                    color="inherit"
                    data-euiicon-type="arrowDown"
                  />
                  <span
                    class="euiButtonEmpty__text"
                  >
                    Linked to 1 rules
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiFlexItem emotion-euiFlexItem-grow-1"
      >
        <div
          class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
        >
          <div
            class="euiPopover emotion-euiPopover"
            data-test-subj="MenuActionsItems"
          >
            <div
              class="euiPopover__anchor css-16vtueo-render"
            >
              <button
                aria-label="Header menu Button Icon"
                class="euiButtonIcon euiButtonIcon--xSmall emotion-euiButtonIcon-empty-primary-hoverStyles"
                data-test-subj="MenuActionsButtonIcon"
                type="button"
              >
                <span
                  aria-hidden="true"
                  class="euiButtonIcon__icon"
                  color="inherit"
                  data-euiicon-type="boxesHorizontal"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`MenuItems should render linkedRules, manageRules and menuActions 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="euiFlexGroup emotion-euiFlexGroup-responsive-l-center-baseline-row"
        data-test-subj="Container"
      >
        <div
          class="euiFlexItem emotion-EuiFlexItem"
        >
          <div
            class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
          >
            <div
              class="euiPopover emotion-euiPopover"
              data-test-subj="LinkedRulesMenuItems"
            >
              <div
                class="euiPopover__anchor css-16vtueo-render"
              >
                <button
                  aria-label="Header menu Button Empty"
                  class="euiButtonEmpty css-9t7nyf-empty-primary"
                  data-test-subj="LinkedRulesMenuEmptyButton"
                  type="button"
                >
                  <span
                    class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
                  >
                    <span
                      class="euiButtonContent__icon"
                      color="inherit"
                      data-euiicon-type="arrowDown"
                    />
                    <span
                      class="euiButtonEmpty__text"
                    >
                      Linked to 1 rules
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="euiFlexItem emotion-euiFlexItem-grow-1"
        >
          <button
            class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-m-fill-primary"
            data-test-subj="ManageRulesButton"
            type="button"
          >
            <span
              class="emotion-euiButtonDisplayContent"
            >
              <span
                class="eui-textTruncate"
              >
                Manage rules
              </span>
            </span>
          </button>
        </div>
        <div
          class="euiFlexItem emotion-euiFlexItem-grow-1"
        >
          <div
            class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
          >
            <div
              class="euiPopover emotion-euiPopover"
              data-test-subj="MenuActionsItems"
            >
              <div
                class="euiPopover__anchor css-16vtueo-render"
              >
                <button
                  aria-label="Header menu Button Icon"
                  class="euiButtonIcon euiButtonIcon--xSmall emotion-euiButtonIcon-empty-primary-hoverStyles"
                  data-test-subj="MenuActionsButtonIcon"
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    class="euiButtonIcon__icon"
                    color="inherit"
                    data-euiicon-type="boxesHorizontal"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="euiFlexGroup emotion-euiFlexGroup-responsive-l-center-baseline-row"
      data-test-subj="Container"
    >
      <div
        class="euiFlexItem emotion-EuiFlexItem"
      >
        <div
          class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
        >
          <div
            class="euiPopover emotion-euiPopover"
            data-test-subj="LinkedRulesMenuItems"
          >
            <div
              class="euiPopover__anchor css-16vtueo-render"
            >
              <button
                aria-label="Header menu Button Empty"
                class="euiButtonEmpty css-9t7nyf-empty-primary"
                data-test-subj="LinkedRulesMenuEmptyButton"
                type="button"
              >
                <span
                  class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
                >
                  <span
                    class="euiButtonContent__icon"
                    color="inherit"
                    data-euiicon-type="arrowDown"
                  />
                  <span
                    class="euiButtonEmpty__text"
                  >
                    Linked to 1 rules
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiFlexItem emotion-euiFlexItem-grow-1"
      >
        <button
          class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-m-fill-primary"
          data-test-subj="ManageRulesButton"
          type="button"
        >
          <span
            class="emotion-euiButtonDisplayContent"
          >
            <span
              class="eui-textTruncate"
            >
              Manage rules
            </span>
          </span>
        </button>
      </div>
      <div
        class="euiFlexItem emotion-euiFlexItem-grow-1"
      >
        <div
          class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
        >
          <div
            class="euiPopover emotion-euiPopover"
            data-test-subj="MenuActionsItems"
          >
            <div
              class="euiPopover__anchor css-16vtueo-render"
            >
              <button
                aria-label="Header menu Button Icon"
                class="euiButtonIcon euiButtonIcon--xSmall emotion-euiButtonIcon-empty-primary-hoverStyles"
                data-test-subj="MenuActionsButtonIcon"
                type="button"
              >
                <span
                  aria-hidden="true"
                  class="euiButtonIcon__icon"
                  color="inherit"
                  data-euiicon-type="boxesHorizontal"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
